--- a/button.html
+++ b/button.html
@@ -19,7 +19,7 @@
     $("#add-btn").on("click", function (event) {
         event.preventDefault();
 
-        var newCharacter = {
+        var newReservation = {
             routeName: $("#nameInput").val().trim(),
             name: $("#nameInput").val().trim(),
             phoneNumber: $("#phoneNumberInput").val().trim(),
