home page fixes 2

--- a/public/home.html
+++ b/public/home.html
@@ -13,10 +13,13 @@
 </head>
 <style>
    
-.jumbotron .container {
-    max-width: 100%;
-    align-items:center;
-    padding:80px
+.jumbotron{
+    padding: 80px;
+    text-align: center;
+} 
+
+.container {
+    margin: auto;
 }
 hr { 
   display: block;
@@ -27,11 +30,12 @@ hr {
   border-style: inset;
   border-width: 1px;
 }
+
 </style>
 
 <body>
-    <div class="jumbotron jumbotron-fluid">
         <div class="container">
+                <div class="jumbotron">
             <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
             <hr>
             <h2>Book your seat before they're all gone!</h2>
