--- a/public/reserve.html
+++ b/public/reserve.html
@@ -12,7 +12,26 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </head>
+<style>
+    .container{
+width:1025px;
+}
+
+.jumbotron .container {
+max-width: 100%;
+}
+    </style>
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+         <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
+         <br>
+         <h2>Book your seat before they're all gone!</h2>
+         <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
+         <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
+
+        </div>
+      </div>
     <div class="card">
         <div class="card-header">
           Table Reservation
