--- a/public/reserve.html
+++ b/public/reserve.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Hot Resturant</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    </head>
 <style>
-    .container{
-width:1025px;
+   
+.jumbotron{
+    padding: 80px;
+    text-align: center;
+} 
+
+.container {
+    margin: auto;
+}
+hr { 
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
 }
 
-.jumbotron .container {
-max-width: 100%;
-}
-    </style>
+</style>
+
 <body>
-    <div class="jumbotron jumbotron-fluid">
         <div class="container">
-         <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
-         <br>
-         <h2>Book your seat before they're all gone!</h2>
-         <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
-         <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
+                <div class="jumbotron">
+            <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
+            <hr>
+            <h2>Book your seat before they're all gone!</h2>
+            <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View
+                Tables</button>
+            <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make
+                Reservation</button>
 
         </div>
+    </div>
+
       </div>
     <div class="card">
         <div class="card-header">
@@ -38,21 +53,21 @@ max-width: 100%;
         </div>
         <form>
             <div class="form-group">
-              <label for="exampleFormControlInput1">Name</label>
-              <input type="email" class="form-control" id="name" placeholder="Name">
+                <label for="nameInput">Your Name: </label>
+                <input type="text" class="form-control" id="nameInput" placeholder="Your Name">
             </div>
             <div class="form-group">
-                <label for="exampleFormControlInput1">Phone Number</label>
-                <input type="email" class="form-control" id="phoneNumber" placeholder="Phone Number">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Unique ID</label>
-                <input type="email" class="form-control" id="uniqueId" placeholder="ID">
-              </div>
+                <label for="phoneNumberInput">Your Phone Number: </label>
+                <input type="text" class="form-control" id="phoneNumberInput" placeholder="Your Phone Number">
+            </div>
+            <div class="form-group">
+                <label for="howManyInput">How Many Will Be Dining: </label>
+                <input type="text" class="form-control" id="howManyInput" placeholder="Number Dining">
+            </div>
+            <div class="form-group">
+                <label for="uniqueID">Enter a Unique ID: </label>
+                <input type="text" class="form-control" id="uniqueID" placeholder="Enter Your UniqueID">
+            </div>
               <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
                 Single toggle
               </button>
