--- a/public/reserve.html
+++ b/public/reserve.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="main.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
 </head>
 <style>
-    .container{
+  .container{
 width:1025px;
 }
 
@@ -21,42 +25,89 @@ width:1025px;
 max-width: 100%;
 }
     </style>
-<body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-         <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
-         <br>
-         <h2>Book your seat before they're all gone!</h2>
-         <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
-         <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
 
-        </div>
+<body>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
+      <br>
+      <h2>Book your seat before they're all gone!</h2>
+      <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
+      <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make
+        Reservation</button>
+
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      Table Reservation
+    </div>
+    <form>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Name</label>
+        <input type="email" class="form-control" id="name" placeholder="Name">
       </div>
-    <div class="card">
-        <div class="card-header">
-          Table Reservation
-        </div>
-        <form>
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Name</label>
-              <input type="email" class="form-control" id="name" placeholder="Name">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Phone Number</label>
-                <input type="email" class="form-control" id="phoneNumber" placeholder="Phone Number">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Unique ID</label>
-                <input type="email" class="form-control" id="uniqueId" placeholder="ID">
-              </div>
-              <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-                Single toggle
-              </button>
-          </form>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Phone Number</label>
+        <input type="email" class="form-control" id="phoneNumber" placeholder="Phone Number">
       </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Unique ID</label>
+        <input type="email" class="form-control" id="uniqueId" placeholder="ID">
+      </div>
+      <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+        Single toggle
+      </button>
+    </form>
+  </div>
+
+  <script type="text/javascript">
+    $(".submit").on("click", function (event) {
+      event.preventDefault();
+
+      // Here we grab the form elements
+      var newReservation = {
+        customerName: $("#name").val().trim(),
+        phoneNumber: $("#phoneNumber").val().trim(),
+        customerEmail: $("#email").val().trim(),
+        customerID: $("#uniqueID").val().trim()
+      };
+
+      console.log(newReservation);
+
+      // This line is the magic. It"s very similar to the standard ajax function we used.
+      // Essentially we give it a URL, we give it the object we want to send, then we have a "callback".
+      // The callback is the response of the server. In our case, we set up code in api-routes that "returns" true or false
+      // depending on if a tables is available or not.
+
+      $.post("/api/tables", newReservation,
+        function (data) {
+
+          // If a table is available... tell user they are booked.
+          if (data) {
+            alert("Yay! You are officially booked!");
+          }
+
+          // If a table is available... tell user they on the waiting list.
+          else {
+            alert("Sorry you are on the wait list");
+          }
+
+          // Clear the form when submitting
+          $("#name").val("");
+          $("#phoneNumber").val("");
+          $("#email").val("");
+          $("#uniqueID").val("");
+
+        });
+
+    });
+
+  </script>
 </body>
+
 </html>
