--- a/public/reserve.html
+++ b/public/reserve.html
@@ -12,8 +12,8 @@
     crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="main.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  <script src="./server.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
 </head>
@@ -21,27 +21,16 @@
   .container{
 width:1025px;
 }
-=======
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Hot Resturant</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-            crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
-    </head>
-  
-<style>   
+ 
 .jumbotron{
     padding: 80px;
     text-align: center;
-} >>>>>>> master
+}
 
 .container {
     margin: auto;
 }
+
 hr { 
   display: block;
   margin-top: 0.5em;
@@ -63,7 +52,7 @@ hr {
       <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make
         Reservation</button>
 
-  </div>
+    </div>
   </div>
   <div class="card">
     <div class="card-header">
@@ -85,12 +74,12 @@ hr {
       <div class="form-group">
         <label for="exampleFormControlInput1">Unique ID</label>
         <input type="email" class="form-control" id="uniqueId" placeholder="ID">
-    </div>  
       </div>
-      <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-        Single toggle
-      </button>
-    </form>
+  </div>
+  <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+    Single toggle
+  </button>
+  </form>
   </div>
 
   <script type="text/javascript">
@@ -102,7 +91,7 @@ hr {
         customerName: $("#name").val().trim(),
         phoneNumber: $("#phoneNumber").val().trim(),
         customerEmail: $("#email").val().trim(),
-        customerID: $("#uniqueID").val().trim()
+        customerID: $("#uniqueId").val().trim()
       };
 
       console.log(newReservation);
@@ -114,15 +103,18 @@ hr {
 
       $.post("/api/tables", newReservation,
         function (data) {
+          for (i = 0; i < reservation.length; i++) {
+            // If a table is available... tell user they are booked.
+            if (reservation.length <= 5) {
+              newReservation.push(reservations);
+              alert("Yay! You are officially booked!");
+            }
 
-          // If a table is available... tell user they are booked.
-          if (data) {
-            alert("Yay! You are officially booked!");
-          }
-
-          // If a table is available... tell user they on the waiting list.
-          else {
-            alert("Sorry you are on the wait list");
+            // If a table is available... tell user they on the waiting list.
+            else {
+              alert("Sorry you are on the wait list");
+              newReservation.push(waitList);
+            }
           }
 
           // Clear the form when submitting
