--- a/public/reserve.html
+++ b/public/reserve.html
@@ -8,11 +8,11 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+       crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="./server.js"></script>
+  <script src="..\server.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
@@ -45,7 +45,7 @@ hr {
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant!</h1>
+      <h1> <span class="glyphicon glyphicon-fire"></span> Hot Resturant</h1>
       <br>
       <h2>Book your seat before they're all gone!</h2>
       <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button>
@@ -76,8 +76,8 @@ hr {
         <input type="email" class="form-control" id="uniqueId" placeholder="ID">
       </div>
   </div>
-  <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-    Single toggle
+  <button type="button" class="btn btn-primary" id="submit" data-toggle="button" aria-pressed="false" autocomplete="off">
+    Reserve
   </button>
   </form>
   </div>
